--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: beadcraft-site
+    name: belle perle
     env: python
     plan: free
     buildCommand: pip install -r requirements.txt
